<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Profile">

    <TextView
        android:id="@+id/textView39"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:textColor="@color/blue"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginVertical="20dp"
        app:srcCompat="@drawable/avatar" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/school_name"
        android:textAlignment="center"
        android:textColor="@color/orange"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView34"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/principal_teacher"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView35"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/dark_blue"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView36"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="10dp"
        android:background="@drawable/profile_textview"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:text="@string/textview"
        android:textColorHint="@color/texthintcolor"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView37"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mobile_number"
        android:textColor="@color/dark_blue"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView38"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/profile_textview"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:text="@string/textview"
        android:textColorHint="@color/texthintcolor"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button14"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_margin="10dp"
        android:backgroundTint="@color/dark_blue"
        android:text="@string/change_password"
        android:textAllCaps="false"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button15"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_margin="10dp"
        android:backgroundTint="@color/dark_blue"
        android:text="@string/sign_out"
        android:textAllCaps="false"
        android:textSize="20sp" />
</LinearLayout>