<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


            <TextView
                android:id="@+id/textView80"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/grey_green"
                android:gravity="center"
                android:text="@string/update_details"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView81"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/name"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editText_name"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/profile_textview"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/children_name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:paddingHorizontal="5dp"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

            <TextView
                android:id="@+id/textView82"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/date_of_birth"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editText_dateofbirth"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/profile_textview"
                android:drawableEnd="@drawable/ic_calendar_menu"
                android:editable="true"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/yyyy_mm_dd"
                android:importantForAutofill="no"
                android:inputType="date"
                android:minHeight="48dp"
                android:paddingHorizontal="5dp"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

            <TextView
                android:id="@+id/textView83"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/mobile_number"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editText_mobile_no"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/profile_textview"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/parents_mobile_number"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="10"
                android:minHeight="48dp"
                android:paddingHorizontal="5dp"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button24"
                    android:layout_width="wrap_content"
                    android:layout_height="52dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/dark_blue"
                    android:text="@string/remove"
                    android:textAllCaps="false"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/button23"
                    android:layout_width="wrap_content"
                    android:layout_height="52dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/dark_blue"
                    android:text="@string/update"
                    android:textAllCaps="false"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>