<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".OTP_Verification">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            app:srcCompat="@drawable/otp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/otp_verification"
            android:textColor="@color/blue"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/please_enter_the_otp_sent_on"
            android:textColor="@color/dark_blue"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/mobile_number"
            android:textAlignment="center"
            android:textColor="@color/grey_green"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/textView9"
                android:layout_width="48dp"
                android:layout_height="50dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:background="@drawable/otp_tf"
                android:hint="@string/_1"
                android:inputType="number"
                android:maxLength="1"
                android:textAlignment="center"
                android:textSize="30sp"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/textView10"
                android:layout_width="48dp"
                android:layout_height="50dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:height="20dp"
                android:autofillHints=""
                android:background="@drawable/otp_tf"
                android:hint="@string/_2"
                android:inputType="number"
                android:maxLength="1"
                android:textAlignment="center"
                android:textSize="30sp"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/textView11"
                android:layout_width="48dp"
                android:layout_height="50dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:height="20dp"
                android:autofillHints=""
                android:background="@drawable/otp_tf"
                android:hint="@string/_3"
                android:inputType="number"
                android:maxLength="1"
                android:textAlignment="center"
                android:textSize="30sp"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/textView12"
                android:layout_width="48dp"
                android:layout_height="50dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:height="20dp"
                android:autofillHints=""
                android:background="@drawable/otp_tf"
                android:hint="@string/_4"
                android:inputType="number"
                android:maxLength="1"
                android:textAlignment="center"
                android:textSize="30sp"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/textView13"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:height="20dp"
                android:autofillHints=""
                android:background="@drawable/otp_tf"
                android:hint="@string/_5"
                android:inputType="number"
                android:maxLength="1"
                android:textAlignment="center"
                android:textSize="30sp"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/textView14"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:height="20dp"
                android:autofillHints=""
                android:background="@drawable/otp_tf"
                android:hint="@string/_6"
                android:inputType="number"
                android:maxLength="1"
                android:textAlignment="center"
                android:textSize="30sp"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_resend_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_receive_otp"
                android:textAlignment="textEnd"
                android:textColor="@color/dark_blue" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resend_otp_again"
                android:textColor="@color/grey_green"
                android:textStyle="bold" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_otp_verify"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="40dp"
                android:backgroundTint="@color/dark_blue"
                android:text="@string/verify"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/progressbar_verifying_otp"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_margin="30dp"
                android:visibility="gone" />
        </FrameLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>