<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    android:paddingVertical="16dp"
    tools:context=".Principal.PrincipalTeacherDetails">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView60"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingHorizontal="20dp"
            android:text="@string/classname"
            android:textAlignment="textEnd"
            android:textColor="@color/orange"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView61"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingHorizontal="20dp"
            android:text="@string/section"
            android:textColor="@color/orange"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch1">

        <TextView
            android:id="@+id/textView62"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:text="@string/subject_name"
            android:textAlignment="viewStart"
            android:textColor="@color/dark_blue"
            android:textSize="14sp"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/textView63"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="60dp"
            android:text="@string/teacher_email_id"
            android:textAlignment="viewStart"
            android:textColor="@color/dark_blue"
            android:textSize="14sp"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/textView64"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/verify_email_id"
            android:textAlignment="center"
            android:textColor="@color/dark_blue"
            android:textSize="12sp"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/textView65"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/class_teacher"
            android:textAlignment="center"
            android:textColor="@color/dark_blue"
            android:textSize="12sp"
            android:textStyle="normal|bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fragment_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_weight="3"
        android:orientation="horizontal"
        android:paddingStart="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"></LinearLayout>

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:minHeight="48dp"
        android:text="@string/add_new_student"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>